Adding DbContext and Mapping Profile

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "server=localhost; database=cargo; user id=sa; password=!dgshfyts344"
+    "Default": "Server=tcp:cargo.database.windows.net,1433;Initial Catalog=CarGO;Persist Security Info=False;User ID=annaadmin;Password=A54dgshfyts344;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
