Adding basic auth set up (needs improvements in future)

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "Default": "Server=tcp:cargo.database.windows.net,1433;Initial Catalog=CarGO;Persist Security Info=False;User ID=annaadmin;Password=A54dgshfyts344;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
+  "Auth0": {
+    "Domain": "https://dev-4fswi5dwxm162ljc.us.auth0.com/",
+    "Audience": "https://cargo.com"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
