Adding controller to update user data

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,7 +4,10 @@
   },
   "Auth0": {
     "Domain": "https://dev-4fswi5dwxm162ljc.us.auth0.com/",
-    "Audience": "https://cargo.com"
+    "Audience": "https://cargo.com",
+    "ManagementAPIAudience": "https://dev-4fswi5dwxm162ljc.us.auth0.com/api/v2/",
+    "ClientId": "sojI17h2DGU3VfTtpbOdlorMijR8OWKa",
+    "ClientSecret": "cc5zjJFYky3P_Tw2ejLKysMxXKuo7YeBt5DRdcISvimT5Q2Q6feCXAK1T-WQWemN"
   },
   "Logging": {
     "LogLevel": {
